# xdyna

./: README.md  install_protection_hook.sh  pyproject.toml  version.sh
.github/workflows/: python-package.yml
examples/: study_without_files.py
examples/example_job_submission/: Step1__generate_study.py  Step1bis__prepare_lines_from_madx.py  Step2__track_job.py  Step3__calculate_DA.py  htcondor_ML.sub  job.sh
examples/machines/: hl14_col_chrom_15_oct_300_B1_s1.mask
examples/machines/MAD-X/: hl14_col_chrom_15_oct_300_B1.mask
tests/: test_ee.py  test_initialization.py  test_version.py  test_xdyna.py
xdyna/: __init__.py  da.py  da_meta.py  general.py  geometry.py  ml.py  plot.py  protectfile.py  sixtrack_jobs.py
